--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 <body>
   <h1>Guarda Saki Croft in diretta su Twitch!</h1>
-  <iframe
-    src="https://player.twitch.tv/?channel=saki_croft&parent=saki-croft.github.io"
+<iframe 
+  src="https://player.twitch.tv/?channel=saki_croft&parent=sakicroft.github.io"
     height="480"
     width="720"
     allowfullscreen>
